# PyPackIT-Test1

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT-AGPL-3-0-or-later.md  LICENSE-AGPL-3-0-or-later.md  README.md  SECURITY.md
.binder/: Dockerfile
.control/: 1_proj.yaml  its.yaml  pkg.yaml  proj.yaml
.control/hooks/: inline.py
.docker/: environment.yml
.github/: .ruff.toml  CODEOWNERS  dev_environment.yaml
.github/.control/: .metadata.json
.github/.repodynamics/: changelog.json  metadata.json  variables.json
.github/ISSUE_TEMPLATE/: 01_app_bug_api.yaml  01_pkg_api_fix.yaml  02_pkg_cli_fix.yaml  04_pkg_build_fix.yaml  04_pkg_setup_fix.yaml  05_pkg_api_feat.yaml  06_pkg_cli_feat.yaml  08_pkg_api_change.yaml  09_pkg_cli_change.yaml  11_doc_fix.yaml  11_docs_fix.yaml  12_doc_feat.yaml  12_docs_feat.yaml  13_doc_change.yaml  13_docs_change.yaml  14_test_api_fix.yaml  15_test_cli_fix.yaml  17_test_build_fix.yaml  17_test_setup_fix.yaml  18_test_api_feat.yaml  19_test_cli_feat.yaml  21_test_api_change.yaml  22_test_cli_change.yaml  24_refactor.yaml  25_config.yaml  26_ci.yaml  26_devops.yaml  27_chore.yaml  27_maintenance.yaml  config.yml
docs/website/: environment.yaml
docs/website/source/: .toc.yaml
pkg/: README.md  environment.yaml  pyproject.toml
pkg/conda-recipe/global/: meta.yaml
pkg/conda-recipe/local/: meta.yaml
pkg/src/my_new_project/: __init__.py
pkg/src/pypackit_test1/: __init__.py
test/: environment.yaml
test/conda-recipe/global/: meta.yaml
test/conda-recipe/local/: meta.yaml
tests/: pyproject.toml
tests/src/my_new_project_testsuite/: __init__.py
tests/src/pypackit_test1_testsuite/: __init__.py  __main__.py  data_tests.py
