[project]
name = "PyPackIT-Test1-TestSuite"
description = "A Placeholder Project Title"
keywords = [
    "First Keyword",
    "Second Keyword",
    "Third Keyword",
    "Fourth Keyword",
    "Fifth Keyword",
    "Sixth Keyword",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
authors = [
    {name = "Armin Ariamajd", email = "armiariam@gmail.com"},
]
maintainers = [
    {name = "Armin Ariamajd", email = "armiariam@gmail.com"},
]
requires-python = "== 3.12.*"
dependencies = [
    "pytest == 8.3.3",
    "coverage == 7.6.1",
    "pytest-cov == 5.0.0",
    "pytest-html == 4.1.1",
    "pkgdata",
]
dynamic = [
    "version",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://AAriam.github.io/PyPackIT-Test1"
Source = "https://github.com/AAriam/PyPackIT-Test1"
Download = "https://github.com/AAriam/PyPackIT-Test1/releases"
Issue-Tracker = "https://github.com/AAriam/PyPackIT-Test1/issues"

[project.scripts]
PyPackIT-Test1-TestSuite = "pypackit_test1_testsuite:__main__"

[build-system]
requires = [
    "setuptools >= 72.1.0",
    "versioningit >= 3.1.2",
]
build-backend = "setuptools.build_meta"

[tool]
[tool.setuptools]
include-package-data = true
license-files = ["LICENSES/*", "COPYRIGHTS/*"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.cmdclass]
build_py = "versioningit.cmdclass.build_py"
sdist = "versioningit.cmdclass.sdist"

[tool.versioningit]
[tool.versioningit.vcs]
method = "git"
match = ["ver/[0-9]*.[0-9]*.[0-9]*"]
default-tag = "ver/0.0.0"

[tool.versioningit.tag2version]
rmprefix = "ver/"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{committer_date:%Y.%m.%d}.{rev}"
dirty = "{base_version}+0.{committer_date:%Y.%m.%d}.{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{committer_date:%Y.%m.%d}.{rev}.dirty"

[tool.versioningit.onbuild]
method = "replace-version"
regex = "^__version_details__: dict\\[str, str\\] = (?P<version>.*)"
require-match = true
source-file = "src/pypackit_test1_testsuite/__init__.py"
build-file = "pypackit_test1_testsuite/__init__.py"
replacement = "{{\n    \"version\": \"{version}\",\n    \"build_date\": \"{build_date:%Y.%m.%d}\",\n    \"committer_date\": \"{committer_date:%Y.%m.%d}\",\n    \"author_date\": \"{author_date:%Y.%m.%d}\",\n    \"branch\": \"{branch}\",\n    \"distance\": \"{distance}\",\n    \"commit_hash\": \"{revision}\",\n}}\n"
